manifests/test/kubevirt-manager/kubevirt-manager_gateway.networking.k8s.io_v1_gateway_kubevirt-manager.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Force=true,Replace=true
    cert-manager.io/cluster-issuer: cluster-ca
  name: kubevirt-manager
  namespace: kubevirt-manager
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 10.5.0.51
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: kubevirt-manager.10.5.0.51.nip.io
    name: kubevirt-manager
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - kind: Secret
        name: paperless-gateway-tls
      mode: Terminate
