manifests/test/kubevirt-manager/rbac.authorization.k8s.io_v1_clusterrole_kubevirt-manager-manage.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kubevirt-manager-manage
rules:
- apiGroups:
  - ""
  resources:
  - pods/log
  verbs:
  - get
- apiGroups:
  - subresources.kubevirt.io
  resources:
  - virtualmachineinstances/console
  - virtualmachineinstances/vnc
  verbs:
  - get
- apiGroups:
  - subresources.kubevirt.io
  resources:
  - virtualmachines/start
  - virtualmachines/stop
  - virtualmachines/restart
  - virtualmachineinstances/pause
  - virtualmachineinstances/unpause
  verbs:
  - update
