manifests/test/kubevirt-manager/rbac.authorization.k8s.io_v1_clusterrole_kubevirt-manager-view.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kubevirt-manager-view
rules:
- apiGroups:
  - ""
  resources:
  - pods
  - services
  - persistentvolumeclaims
  verbs:
  - get
- apiGroups:
  - kubevirt.io
  resources:
  - virtualmachines
  - virtualmachineinstances
  verbs:
  - get
- apiGroups:
  - pool.kubevirt.io
  resources:
  - virtualmachinepools
  verbs:
  - get
- apiGroups:
  - cdi.kubevirt.io
  resources:
  - datavolumes
  verbs:
  - get
- apiGroups:
  - kubevirt-manager.io
  resources:
  - images
  verbs:
  - get
