manifests/test/kubevirt-manager/rbac.authorization.k8s.io_v1_clusterrolebinding_kubevirt-manager.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Force=true,Replace=true
  name: kubevirt-manager
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: kubevirt-manager
subjects:
- kind: ServiceAccount
  name: kubevirt-manager
  namespace: kubevirt-manager
