manifests/test/kubevirt-manager/vms_rbac.authorization.k8s.io_v1_rolebinding_kubevirt-manager-manage.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Force=true,Replace=true
  name: kubevirt-manager-manage
  namespace: vms
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: kubevirt-manager-manage
subjects:
- kind: ServiceAccount
  name: kubevirt-manager
  namespace: kubevirt-manager
